# Rule34Video-Tauri-App

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build-ios.yml
docs/: adblock.md  architecture.md  development.md  features.md  index.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/ext/: adblock.rs  adblock_bundled.txt  mod.rs  webview_intercept.rs
