[package]
name = "rule34video"
version = "1.0.4"
description = "Customize your Virtual World!"
authors = ["The Back Room"]
edition = "2021"

[lib]
name = "rule34video_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "rule34video"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-utils = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = ">=2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
adblock = "0.12"
reqwest = "0.12"
webview2-com = "0.38"
windows = { version = "0.61", default-features = false, features = ["Win32_System_Com"] }
windows-core = "0.61"
